@@ -668,7 +668,7 @@ INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) V
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(669, 'standard', 'en', 'You don''t have no right to see the requested page...');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(670, 'standard', 'en', 'Unknown');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(671, 'standard', 'en', 'Never');
-INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(672, 'standard', 'en', '<h1>Version:</h1> Automne <strong>%s</strong> - Last update: %s <br />Charset: %s - LibXML: %s<br /><br /> <h1>Installed modules:</h1> Polymod<br /> %s <br /> <h1>Automne community websites:</h1> <ul class="atm-server"> <li class="atm-pic-logo"><a href="http://en.automne-cms.org" target="_blank">Visit official Automne website</a>: You can find all the news.</li> <li class="atm-pic-logo"><a href="http://man.automne-cms.org" target="_blank">All Automne inline documentation</a> : For all the explanation on the use of Automne as well as tutorials..</li> <li class="atm-pic-logo"><a href="http://www.automne-cms.org/forum/" target="_blank">Forum of Automne users</a> : Contacting other users and share your ideas or your problems.</li> </ul> <br /> <h1>Your impressions of Automne:</h1> You can send us your comments on <a href="http://www.automne-cms.org/contact/" target="_blank">this page</a>.<br />All your comments and criticisms are welcome! <br /><br /> <h1>Need Training or Support?</h1> <a href="http://www.automne-cms.org/support/" target="_blank">Feel free to contact us</a>. We provide training at all levels as well as professional support services. <br /><br /> <fieldset> Automne is an open source software licensed under GNU-GPL and created by<br /><br /> <a href="http://www.ws-interactive.fr" target="_blank"><img src="img/logo-ws.png" alt="WS Interactive" title="WS Interactive" /></a> </fieldset>');
+INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(672, 'standard', 'en', '<h1>\n	Version:</h1>\n<p>\n	Automne <strong>%s</strong> - Last update: %s<br />\n	Charset: %s - LibXML: %s<br />\n	&nbsp;</p>\n<h1>\n	Installed modules:</h1>\n<p>\n	Polymod<br />\n	%s</p>\n<h1>\n	Automne community websites:</h1>\n<ul class=\"atm-server\">\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://en.automne-cms.org\" target=\"_blank\">Visit official Automne website</a>: You can find all the news.</li>\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://man.automne-cms.org\" target=\"_blank\">All Automne inline documentation</a> : For all the explanation on the use of Automne as well as tutorials..</li>\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://www.automne-cms.org/forum/\" target=\"_blank\">Forum of Automne users</a> : Contacting other users and share your ideas or your problems.</li>\n</ul>\n<br />\n<h1>\n	Your impressions of Automne:</h1>\n<p>\n	You can send us your comments on <a href=\"http://www.automne-cms.org/contact/\" target=\"_blank\">this page</a>.<br />\n	All your comments and criticisms are welcome!<br />\n	&nbsp;</p>\n<h1>\n	Need Training or Support?</h1>\n<p>\n	<a href=\"http://www.automne-cms.org/support/\" target=\"_blank\">Feel free to contact us</a>. We provide training at all levels as well as professional support services.</p>\n<br />\n<p>\n	<a class=\"wsi\" href=\"http://www.ws-interactive.fr\" target=\"_blank\"><span class=\"first\">Automne is an open source software licensed</span><br /><span class=\"second\">under GNU-GPL and created by <strong>WS&nbsp;Interactive</strong></span></a></p>\n<p>\n	&nbsp;</p>\n');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(673, 'standard', 'en', 'This page presents various information about your version of Automne and all websites available to help the community.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(674, 'standard', 'en', 'Beware, debugging is active.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(675, 'standard', 'en', 'Press F2 to see the log window.');
