@@ -668,7 +668,7 @@ INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) V
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(669, 'standard', 'fr', 'Vous n''avez pas le droit de voir la page demandée.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(670, 'standard', 'fr', 'Inconnue');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(671, 'standard', 'fr', 'Jamais');
-INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(672, 'standard', 'fr', '<h1>Version :</h1> Automne <strong>%s</strong> - Dernière mise à jour : %s <br />Jeu de caractères : %s - LibXML : %s<br /><br /> <h1>Modules installés :</h1> Polymod<br /> %s <br /> <h1>Sites de la communauté Automne :</h1> <ul class="atm-server"> <li class="atm-pic-logo"><a href="http://www.automne-cms.org" target="_blank">Visitez le site officiel d''Automne</a> : Vous y trouverez toutes les nouveautés.</li> <li class="atm-pic-logo"><a href="http://doc.automne-cms.org" target="_blank">Toute la documentation Automne en ligne</a> : Pour toutes les explications sur l''utilisation d''Automne ainsi que des tutoriaux.</li> <li class="atm-pic-logo"><a href="http://www.automne-cms.org/forum/" target="_blank">Forum des utilisateurs d''Automne</a> : Pour communiquer avec d''autres utilisateurs et échanger vos idées ou vos problèmes.</li> </ul> <br /> <h1>Vos impressions sur Automne :</h1> Vous pouvez nous envoyer vos commentaires sur Automne sur <a href="http://www.automne-cms.org/contact/" target="_blank">cette page</a>.<br />Toutes vos remarques et critiques seront les bienvenues ! <br /><br /> <h1>Besoin de formation ou de support ?</h1> <a href="http://www.automne-cms.org/support/" target="_blank">N''hésitez pas à nous contacter</a>. Nous proposons des formations par niveau ainsi qu''une offre de support professionnel. <br /><br /> <fieldset> Automne est un logiciel sous license open source GNU-GPL créé par<br /><br /> <a href="http://www.ws-interactive.fr" target="_blank"><img src="img/logo-ws.png" alt="WS Interactive" title="WS Interactive" /></a> </fieldset>');
+INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(672, 'standard', 'fr', '<h1>\n	Version :</h1>\n<p>\n	Automne <strong>%s</strong> - Dernière mise à jour : %s<br />\n	Jeu de caractères : %s - LibXML : %s<br />\n	&nbsp;</p>\n<h1>\n	Modules installés :</h1>\n<p>\n	Polymod<br />\n	%s</p>\n<h1>\n	Sites de la communauté Automne :</h1>\n<ul class=\"atm-server\">\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://www.automne-cms.org\" target=\"_blank\">Visitez le site officiel d\'Automne</a> : Vous y trouverez toutes les nouveautés.</li>\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://doc.automne-cms.org\" target=\"_blank\">Toute la documentation Automne en ligne</a> : Pour toutes les explications sur l\'utilisation d\'Automne ainsi que des tutoriaux.</li>\n	<li class=\"atm-pic-logo\">\n		<a href=\"http://www.automne-cms.org/forum/\" target=\"_blank\">Forum des utilisateurs d\'Automne</a> : Pour communiquer avec d\'autres utilisateurs et échanger vos idées ou vos problèmes.</li>\n</ul>\n<br />\n<h1>\n	Vos impressions sur Automne :</h1>\n<p>\n	Vous pouvez nous envoyer vos commentaires sur Automne sur <a href=\"http://www.automne-cms.org/contact/\" target=\"_blank\">cette page</a>.<br />\n	Toutes vos remarques et critiques seront les bienvenues !<br />\n	&nbsp;</p>\n<h1>\n	Besoin de formation ou de support ?</h1>\n<p>\n	<a href=\"http://www.automne-cms.org/support/\" target=\"_blank\">N\'hésitez pas à nous contacter</a>. Nous proposons des formations par niveau ainsi qu\'une offre de support professionnel.</p>\n<br />\n<p>\n	<a class=\"wsi\" href=\"http://www.ws-interactive.fr\" target=\"_blank\"><span class=\"first\">Automne est un logiciel sous license</span><br /><span class=\"second\">open source GNU-GPL créé par <strong>WS&nbsp;Interactive</strong></span></a></p>\n<p>\n	&nbsp;</p>\n');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(673, 'standard', 'fr', 'Cette page vous présente les différentes informations concernant votre version d''Automne ainsi que tous les sites d''aide disponibles pour la communauté.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(674, 'standard', 'fr', 'Attention, le debuggage est actif.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(675, 'standard', 'fr', 'Pressez F2 pour voir la fenêtre de log.');
