@@ -9,6 +9,7 @@ V4.2.1 (in progress)
 [REFACTOR] : Optimize all images used in Automne
 [REFACTOR] : Replace fckeditor with ckeditor version 3.6.2 in block text and polymod
 [REFACTOR] : Remove deprecated parameter ALLOW_IMAGES_IN_WYSIWYG
+[REFACTOR] : Update WS Interactive logo
 [FEATURE] : Add user logs in alias module
 
 V4.2.0 (15/02/2012)
